# IN4110

./: README.md
assignment1/: friendly_greeting.txt  less_friendly_greeting.txt  myfirstcommit.txt
assignment2/: array_class.py  readme.md  test_array.py
assignment3/: README.md  profile-report.md  pyproject.toml
assignment3/instapy/: __main__.py  cli.py  cython_filters.cp37-win_amd64.pyd  cython_filters.html  cython_filters.pyx  numba_filters.py  numpy_filters.py  profiling.py  python_filters.py  timing-report.txt  timing.py
assignment3/instapy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
assignment3/test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  collect_dates.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  test.txt  time_planner.py  wiki_race_challenge.py
assignment5/: app.py  strompris.py
assignment5/docs/: conf.py  http_cache.sqlite  strompris.rst
assignment5/docs/_build/doctrees/: environment.pickle  index.doctree  strompris.doctree
assignment5/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  strompris.html
assignment5/docs/_build/html/_sources/: index.rst.txt
assignment5/templates/: activity.html  strompris.html
